# BrickSea

./: Cargo.toml  Makefile  README.md
libs/buffer/: Cargo.toml
libs/buffer/src/: lib.rs  slice.rs  vector.rs
libs/encoding/: Cargo.toml
libs/encoding/src/: fixed.rs  lib.rs  variant.rs
libs/error/: Cargo.toml
libs/error/src/: lib.rs
src/: buffer.rs  encoding.rs  error.rs  io.rs  lib.rs  tests.rs  wal.rs
src/io/: blocking.rs  sched.rs
src/tests/: encoding.rs  wal.rs
src/wal/: block.rs  record.rs  writer.rs
