[package]
name = "brick"
version = "0.1.0"
authors = ["chadmai <Sunmxt@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crc32fast = "1.3.1"
rand = "0.8.5"
crc = "2.1.0"
buffer = { path = "libs/buffer" }
error = { path = "libs/error" }
encoding = { path = "libs/encoding" }

[workspace]
member = ["libs/*"]